--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "2"
+version: "3"
 services:
   app:
-    container_name: gdal_playground
+    container_name: tiff-labelwriter
     restart: always
     build: .
     ports:
